--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.8.0)
 project(collision)
 
+enable_testing()
+
 add_subdirectory(dependencies)
+add_subdirectory(tests)
 
