added missing cmake expression for cxx standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.8.0)
 project(aabb)
 
+set(CMAKE_CXX_STANDARD 14)
+
 enable_testing()
 
 add_subdirectory(dependencies)
