--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(aabb_test_command
     main.cxx
     collision.cxx
     move_collision.cxx
+    narrowed_movement.cxx
 )
 
 target_include_directories(aabb_test_command PRIVATE "${CMAKE_SOURCE_DIR}/src")
