renamed previous tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_executable(aabb_test_command
+add_executable(aabb_test_command_double
     main.cxx
-    collision.cxx
-    move_collision.cxx
+    collision_double.cxx
+    move_collision_double.cxx
 )
 
-target_include_directories(aabb_test_command PRIVATE "${CMAKE_SOURCE_DIR}/src")
-target_link_libraries(aabb_test_command gmock gtest)
+target_include_directories(aabb_test_command_double PRIVATE "${CMAKE_SOURCE_DIR}/src")
+target_link_libraries(aabb_test_command_double gmock gtest)
 
-add_test(NAME aabb_test COMMAND aabb_test_command)
+add_test(NAME aabb_test_double COMMAND aabb_test_command_double)
 
