added cmake option for building the tests and gmock/gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.8.0)
 project(aabb)
 
-set(CMAKE_CXX_STANDARD 14)
+option(BUILD_AABB_TESTS "Build the tests for the aabb library as well as the gtest/gmock dependency" FALSE)
 
-enable_testing()
-
-add_subdirectory(dependencies)
-add_subdirectory(tests)
+if(BUILD_AABB_TESTS)
+    set(CMAKE_CXX_STANDARD 14)
+    
+    enable_testing()
+    
+    add_subdirectory(dependencies)
+    add_subdirectory(tests)
+endif(BUILD_AABB_TESTS)
 
