first test for collision type detection function

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,13 @@ target_include_directories(aabb_move_collision_test_command PRIVATE "${CMAKE_SOU
 target_link_libraries(aabb_move_collision_test_command gmock gtest)
 
 add_test(NAME aabb_move_collision_test COMMAND aabb_move_collision_test_command)
+
+add_executable(aabb_collision_type_detection_test_command
+	main.cxx
+	collision_type_detection.cxx
+)
+
+target_include_directories(aabb_collision_type_detection_test_command PRIVATE "${CMAKE_SOURCE_DIR}/include")
+target_link_libraries(aabb_collision_type_detection_test_command gmock gtest)
+
+add_test(NAME aabb_collision_type_detection_test COMMAND aabb_collision_type_detection_test_command)
