--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,40 +1,17 @@
-add_executable(aabb_collision_test_command
-    main.cxx
-    collision.cxx
-)
-
-target_include_directories(aabb_collision_test_command PRIVATE "${CMAKE_SOURCE_DIR}/include")
-target_link_libraries(aabb_collision_test_command gmock gtest)
-
-add_test(NAME aabb_collision_test COMMAND aabb_collision_test_command)
-
-add_executable(aabb_move_collision_test_command
-    main.cxx
-    move_collision.cxx
-)
-
-target_include_directories(aabb_move_collision_test_command PRIVATE "${CMAKE_SOURCE_DIR}/include")
-target_link_libraries(aabb_move_collision_test_command gmock gtest)
-
-add_test(NAME aabb_move_collision_test COMMAND aabb_move_collision_test_command)
-
-add_executable(aabb_collision_type_detection_test_command
-	main.cxx
+add_executable(aabb_test
+	collision.cxx
+	move_collision.cxx
 	collision_type_detection.cxx
 )
 
-target_include_directories(aabb_collision_type_detection_test_command PRIVATE "${CMAKE_SOURCE_DIR}/include")
-target_link_libraries(aabb_collision_type_detection_test_command gmock gtest)
+if(MSVC)
+    target_compile_options(aabb_test PRIVATE /W4)
+else()
+    target_compile_options(aabb_test PRIVATE -Wall)
+    target_compile_options(aabb_test PRIVATE -Wextra)
+endif()
 
-add_test(NAME aabb_collision_type_detection_test COMMAND aabb_collision_type_detection_test_command)
+target_include_directories(aabb_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(aabb_test gmock_main gtest)
 
-foreach(test_target aabb_move_collision aabb_move_collision aabb_collision_type_detection)
-    set(target_command "${test_target}_test_command")
-    if(MSVC)
-        target_compile_options(${target_command} PRIVATE "/W4")
-    else()
-        target_compile_options(${target_command} PRIVATE "-Wall")
-        target_compile_options(${target_command} PRIVATE "-Wextra")
-    endif()
-endforeach(test_target)
-
+add_test(NAME aabb_test COMMAND aabb_test)
