--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 dist: trusty
 sudo: required
-language:
-	- cpp
-compiler:
-	- gcc
+language: cpp
+compiler: gcc
 addons:
-	apt:
-		packages:
-			- gcc-6
-			- g++-6
-			- cmake
+ apt:
+  packages:
+   - gcc-6
+   - g++-6
+   - cmake
 
 script:
-	- mkdir build
-	- cd build
-	- cmake .. && make
+ - mkdir build
+ - cd build
+ - cmake ..
+ - make
