--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
 script:
  - mkdir build
  - cd build
- - cmake -DAABB_BUILD_TESTS:ON ..
+ - cmake -DAABB_BUILD_TESTS=ON ..
  - make
  - make test
