--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,8 @@ add_executable(aabb_test
 	collision_type_detection.cxx
 )
 
+set_target_properties(aabb_test PROPERTIES CXX_STANDARD 14)
+
 if(MSVC)
     target_compile_options(aabb_test PRIVATE /W4)
 else()
@@ -15,3 +17,4 @@ target_include_directories(aabb_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(aabb_test gmock_main gtest)
 
 add_test(NAME aabb_test COMMAND aabb_test)
+
