trying to get travis to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ language: cpp
 compiler: gcc
 addons:
  apt:
+  sources:
+   - ubuntu-toolchain-r-test
   packages:
-   - gcc
-   - g++
+   - gcc-6
+   - g++-6
    - cmake
 
 script:
