--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ build_script:
 
     cd build
 
-    cmake .. -G "Visual Studio 15"
+    cmake -DAABB_BUILD_TESTS=ON .. -G "Visual Studio 15"
 
     cmake --build . --config "Debug"
 
